--- a/sass/common/_footer.scss
+++ b/sass/common/_footer.scss
@@ -12,18 +12,20 @@
   text-align: center;
 
   @media screen and (min-width: $mobile) {
-    // For tablet devices
     width: 480px;
   }
 
   @media screen and (min-width: $tablet) {
-    // For small desktop devices
     width: 768px;
   }
 
   @media screen and (min-width: $desktop) {
-    // For large desktop devices
     width: 1200px;
+    display: flex;
+    justify-content: space-between;
+
+    padding-bottom: 0px;
+    text-align: left;
   }
 }
 
@@ -53,6 +55,16 @@
   }
 }
 
+.address-joinus-container {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  @media screen and (min-width: $desktop) {
+  }
+}
+
 .footer-address-container {
   margin-bottom: 60px;
   display: block;
@@ -70,6 +82,12 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+  
+  @media screen and (min-width: $tablet) {
+  }
+  
+  @media screen and (min-width: $desktop) {
+  }
 
   .location {
     color: $aditional-text-color;
@@ -83,6 +101,14 @@
 
 .join-us-container {
   margin-bottom: 60px;
+  
+  @media screen and (min-width: $tablet) {
+  }
+  
+  @media screen and (min-width: $desktop) {
+    margin-left: 70px;
+  }
+
   .join-text {
     margin-top: 0px;
     margin-bottom: 20px;
@@ -137,6 +163,10 @@
 }
 
 .subscribe-form {
+  @media screen and (min-width: $desktop) {
+    display: block;
+  }
+
   .subscribe-text {
     margin-top: 0px;
     margin-bottom: 20px;
@@ -152,12 +182,16 @@
 }
 
 .subscribe-container {
+@media screen and (min-width: $desktop) {
+  display: flex;
+}
   .subscribe-input {
     width: 95%;
     height: 50px;
 
     padding: 15px 16px;
     margin-bottom: 20px;
+    margin-right: 10px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -179,6 +213,7 @@
     @media screen and (min-width: $tablet) {
       width: 450px;
     }
+
     @media screen and (min-width: $desktop) {
       width: 358px;
     }
