--- a/sass/common/_header.scss
+++ b/sass/common/_header.scss
@@ -102,6 +102,9 @@
     font-size: 14px;
     line-height: 16px;
   }
+
+  @media screen and (min-width: $desktop) {
+  }
 }
 
 .site-nav-list {
@@ -119,6 +122,7 @@
 
   @media screen and (min-width: $desktop) {
     display: flex;
+    align-items: center;
     margin-right: 305px;
   }
 }
@@ -185,7 +189,7 @@
 
 .header-address-list {
   display: block;
-  
+
   @media screen and (min-width: $tablet) {
     margin-bottom: -10px;
     text-align: left;
@@ -224,9 +228,13 @@
   }
 
   @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     margin-bottom: 0px;
     margin-right: 30px;
-    
+
     font-size: 14px;
     line-height: 16px;
   }
