--- a/css/main.css
+++ b/css/main.css
@@ -258,6 +258,8 @@ address {
 .site-nav-link:active {
   position: relative;
   color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav-link:active::after {
