--- a/sass/common/_header.scss
+++ b/sass/common/_header.scss
@@ -144,6 +144,7 @@
     position: relative;
 
     color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &::after {
       content: '';
