--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,5 +12,7 @@
 @import "./components-index/index-components";
 
 // Portfolio Components
+@import "./components-portfolio/buttons-container";
+@import "./components-portfolio/portfolio-card-container";
 
 
