кнопки портфолио для мобилки и десктопа

--- a/css/main.css
+++ b/css/main.css
@@ -1523,4 +1523,90 @@ address {
   color: #2196f3;
   text-decoration: underline;
 }
+
+.buttons-container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .buttons-container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .buttons-container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .buttons-container {
+    width: 1200px;
+    margin-top: 94px;
+    margin-bottom: 50px;
+  }
+}
+
+.portfolio-buttons-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: -15px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-buttons-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.portfolio-buttons-list .portfolio-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 8px;
+  margin-bottom: 15px;
+  padding: 6px 22px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px;
+  border-color: transparent;
+  color: #212121;
+  background-color: #f5f4fa;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.03em;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-buttons-list .portfolio-button:hover, .portfolio-buttons-list .portfolio-button:focus {
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+  background-color: #2196f3;
+}
 /*# sourceMappingURL=main.css.map */
