--- a/css/main.css
+++ b/css/main.css
@@ -652,8 +652,7 @@ address {
   background-repeat: no-repeat;
   font-family: Roboto, sans-serif;
   text-align: center;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../../images/Header-mobile1x.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../../images/Header-mobile1x.jpg);
+  background-image: url(../../images/Header-mobile1x.jpg);
   background-size: 480px 400px;
 }
 
