--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -18,7 +18,7 @@
   text-align: center;
 
   // для мобилки:
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../../images/Header-mobile1x.jpg);
+  background-image: url(../../images/Header-mobile1x.jpg);
   background-size: 480px 400px;
 
   @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
