--- a/css/main.css
+++ b/css/main.css
@@ -113,13 +113,13 @@ address {
 
 @media screen and (min-width: 480px) {
   .header-container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .header-container {
-    width: 768px;
+    max-width: 768px;
     height: 80px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -129,7 +129,7 @@ address {
 
 @media screen and (min-width: 1200px) {
   .header-container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -256,14 +256,18 @@ address {
   }
 }
 
-.site-nav-link:active {
+.site-nav-link:hover, .site-nav-link:focus {
+  color: #2196f3;
+}
+
+.site-nav-link.active {
   position: relative;
   color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav-link:active::after {
+.site-nav-link.active::after {
   content: '';
   position: absolute;
   left: 0;
@@ -289,13 +293,13 @@ address {
 }
 
 @media screen and (max-width: 767px) {
-  .site-nav-link:active::after {
+  .site-nav-link.active::after {
     top: 25px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .site-nav-link:active::after {
+  .site-nav-link.active::after {
     top: 44px;
     bottom: 0;
   }
@@ -632,6 +636,50 @@ address {
   }
 }
 
+.hero-container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    max-width: 1200px;
+  }
+}
+
+.hero-container .hero-title {
+  margin-top: 0px;
+  margin-bottom: 30px;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 42px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-container .hero-title {
+    font-size: 44px;
+    line-height: 60px;
+  }
+}
+
 .hero-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -645,34 +693,34 @@ address {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 60px;
-  max-width: 100%;
+  max-width: 480px;
   height: 400px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: Roboto, sans-serif;
-  text-align: center;
-  background-image: url(../../images/Header-mobile1x.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../../images/Header-mobile1x.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-mobile1x.jpg");
   background-size: 480px 400px;
 }
 
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero-section .hero-section {
-    background-image: url(../../images/Header-mobile2x.jpg);
+    background-image: url("../../images/Header-mobile2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero-section {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../../images/Header-tablet1x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../../images/Header-tablet1x.jpg);
+    max-width: 768px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../../images/Header-tablet1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-tablet1x.jpg");
     background-size: 768px 400px;
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero-section .hero-section {
-    background-image: url(../../images/Header-tablet2x.jpg);
+    background-image: url("../../images/Header-tablet2x.jpg");
   }
 }
 
@@ -681,33 +729,15 @@ address {
     max-width: 1600px;
     height: 600px;
     margin-bottom: 94px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../../images/Header-desktop1x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../../images/Header-desktop1x.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../../images/Header-desktop1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-desktop1x.jpg");
     background-size: 1600px 600px;
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero-section .hero-section {
-    background-image: url(../../images/Header-desktop2x.jpg);
-  }
-}
-
-.hero-title {
-  margin-top: 0px;
-  margin-bottom: 30px;
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 42px;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 1200px) {
-  .hero-title {
-    font-size: 44px;
-    line-height: 60px;
+    background-image: url("../../images/Header-desktop2x.jpg");
   }
 }
 
