--- a/sass/common/_header.scss
+++ b/sass/common/_header.scss
@@ -15,18 +15,18 @@
   padding: 15px;
 
   @media screen and (min-width: $mobile) {
-    width: 480px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: $tablet) {
-    width: 768px;
+    max-width: 768px;
     height: 80px;
 
     display: flex;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 1200px;
+    max-width: 1200px;
   }
 
   .logo-link {
@@ -140,8 +140,13 @@
 
     margin-bottom: 0px;
   }
+  
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 
-  &:active {
+  &.active {
     position: relative;
 
     color: $accent-color;
