--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -1,3 +1,42 @@
+.hero-container {
+  display: block;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  font-family: $font-main;
+  text-align: center;
+
+  @media screen and (min-width: $mobile) {
+    max-width: 480px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    max-width: 768px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    max-width: 1200px;
+  }
+
+  .hero-title {
+    margin-top: 0px;
+    margin-bottom: 30px;
+
+    color: $aditional-text-color;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 42px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    @media screen and (min-width: $desktop) {
+      font-size: 44px;
+      line-height: 60px;
+    }
+  }
+}
+
 .hero-section {
   display: flex;
   align-items: center;
@@ -7,34 +46,35 @@
   margin-right: auto;
   margin-bottom: 60px;
 
-  max-width: 100%;
+  max-width: 480px;
   height: 400px;
 
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 
-  font-family: $font-main;
-  text-align: center;
-
   // для мобилки:
-  background-image: url(../../images/Header-mobile1x.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-mobile1x.jpg");
   background-size: 480px 400px;
 
-  @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  @media screen and (min-device-pixel-ratio: 2), 
+  screen and (min-resolution: 192dpi), 
+  screen and (min-resolution: 2dppx) {
     .hero-section {
-      background-image: url(../../images/Header-mobile2x.jpg);
+      background-image: url("../../images/Header-mobile2x.jpg");
     }
   }
 
   // для планшета:
   @media screen and (min-width: $tablet) {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../../images/Header-tablet1x.jpg);
+    max-width: 768px;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-tablet1x.jpg");
     background-size: 768px 400px;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url(../../images/Header-tablet2x.jpg);
+        background-image: url("../../images/Header-tablet2x.jpg");
       }
     }
   }
@@ -46,31 +86,13 @@
 
     margin-bottom: 94px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../../images/Header-desktop1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-desktop1x.jpg");
     background-size: 1600px 600px;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url(../../images/Header-desktop2x.jpg);
+        background-image: url("../../images/Header-desktop2x.jpg");
       }
     }
   }
 }
-
-.hero-title {
-  margin-top: 0px;
-  margin-bottom: 30px;
-
-  color: $aditional-text-color;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 42px;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-
-  @media screen and (min-width: $desktop) {
-    font-size: 44px;
-    line-height: 60px;
-  }
-}
-
