--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -54,14 +54,15 @@
   background-repeat: no-repeat;
 
   // для мобилки:
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-mobile1x.jpg");
-  background-size: 480px 400px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
+  url("/images/Header-mobile1x.jpg");
+  background-size: cover;
 
   @media screen and (min-device-pixel-ratio: 2), 
   screen and (min-resolution: 192dpi), 
   screen and (min-resolution: 2dppx) {
     .hero-section {
-      background-image: url("../../images/Header-mobile2x.jpg");
+      background-image: url("/images/Header-mobile2x.jpg");
     }
   }
 
@@ -69,12 +70,13 @@
   @media screen and (min-width: $tablet) {
     max-width: 768px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-tablet1x.jpg");
-    background-size: 768px 400px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
+    url("/images/Header-tablet1x.jpg");
+    background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url("../../images/Header-tablet2x.jpg");
+        background-image: url("/images/Header-tablet2x.jpg");
       }
     }
   }
@@ -86,12 +88,13 @@
 
     margin-bottom: 94px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../images/Header-desktop1x.jpg");
-    background-size: 1600px 600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
+    url("/images/Header-desktop1x.jpg");
+    background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url("../../images/Header-desktop2x.jpg");
+        background-image: url("/images/Header-desktop2x.jpg");
       }
     }
   }
