--- a/sass/components-index/_features-section.scss
+++ b/sass/components-index/_features-section.scss
@@ -8,15 +8,15 @@
   margin-bottom: 60px;
 
   @media screen and (min-width: $mobile) {
-    width: 480px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: $tablet) {
-    width: 768px;
+    max-width: 768px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -32,10 +32,6 @@
 .feachers-item {
   width: calc(100% - 2 * 15px);
   margin: 15px;
-
-  @media screen and (min-width: $mobile) {
-    // For tablet devices
-  }
 
   @media screen and (min-width: $tablet) {
     // For small desktop devices
@@ -102,6 +98,5 @@
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
-
   }
 }
