--- a/sass/components-index/_doings-section.scss
+++ b/sass/components-index/_doings-section.scss
@@ -3,20 +3,22 @@
     display: none;
   }
 
-  width: $desktop;
-  align-items: center;
+  @media screen and (min-width: $desktop) {
+    max-width: 1200px;
+    align-items: center;
 
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0px;
-  margin-bottom: 94px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+    margin-bottom: 94px;
 
-  .doings-list {
-    display: flex;
-    margin: -15px;
+    .doings-list {
+      display: flex;
+      margin: -15px;
+    }
   }
 }
 
@@ -36,7 +38,7 @@
     display: block;
     max-width: 100%;
     height: auto;
-    
+
     margin: 0px;
   }
 
