--- a/sass/components-index/_team-section.scss
+++ b/sass/components-index/_team-section.scss
@@ -25,15 +25,15 @@
   letter-spacing: 0.03em;
 
   @media screen and (min-width: $mobile) {
-    width: 480px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: $tablet) {
-    width: 768px;
+    max-width: 768px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
