--- a/css/main.css
+++ b/css/main.css
@@ -700,8 +700,8 @@ address {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("/images/Header-mobile1x.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("/images/Header-mobile1x.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8))), url("/images/Header-mobile1x.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), url("/images/Header-mobile1x.jpg");
   background-size: cover;
 }
 
@@ -714,8 +714,8 @@ address {
 @media screen and (min-width: 768px) {
   .hero-section {
     max-width: 768px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("/images/Header-tablet1x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("/images/Header-tablet1x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8))), url("/images/Header-tablet1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), url("/images/Header-tablet1x.jpg");
     background-size: cover;
   }
 }
@@ -731,8 +731,8 @@ address {
     max-width: 1600px;
     height: 600px;
     margin-bottom: 94px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("/images/Header-desktop1x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("/images/Header-desktop1x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8))), url("/images/Header-desktop1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), url("/images/Header-desktop1x.jpg");
     background-size: cover;
   }
 }
