--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -54,7 +54,7 @@
   background-repeat: no-repeat;
 
   // для мобилки:
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), 
   url("/images/Header-mobile1x.jpg");
   background-size: cover;
 
@@ -70,7 +70,7 @@
   @media screen and (min-width: $tablet) {
     max-width: 768px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), 
     url("/images/Header-tablet1x.jpg");
     background-size: cover;
 
@@ -88,7 +88,7 @@
 
     margin-bottom: 94px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), 
     url("/images/Header-desktop1x.jpg");
     background-size: cover;
 
