--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -1,8 +1,8 @@
 // body {
-//   align-items: center;
-//   justify-content: center;
+  // align-items: center;
+  // justify-content: center;
 // }
-
+// 
 // main {
 //   font-family: $font-main;
 // }
