--- a/css/main.css
+++ b/css/main.css
@@ -700,29 +700,29 @@ address {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8))), url("/images/Header-mobile1x.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), url("/images/Header-mobile1x.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("/Header-mobile1x.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("/Header-mobile1x.jpg");
   background-size: cover;
 }
 
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero-section .hero-section {
-    background-image: url("/images/Header-mobile2x.jpg");
+    background-image: url("/Header-mobile2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero-section {
     max-width: 768px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8))), url("/images/Header-tablet1x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), url("/images/Header-tablet1x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("/Header-tablet1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("/Header-tablet1x.jpg");
     background-size: cover;
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero-section .hero-section {
-    background-image: url("/images/Header-tablet2x.jpg");
+    background-image: url("/Header-tablet2x.jpg");
   }
 }
 
@@ -731,15 +731,15 @@ address {
     max-width: 1600px;
     height: 600px;
     margin-bottom: 94px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8))), url("/images/Header-desktop1x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), url("/images/Header-desktop1x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("/Header-desktop1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("/Header-desktop1x.jpg");
     background-size: cover;
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero-section .hero-section {
-    background-image: url("/images/Header-desktop2x.jpg");
+    background-image: url("/Header-desktop2x.jpg");
   }
 }
 
@@ -1540,7 +1540,7 @@ address {
 .accept-conditions .accept-conditions-checkbox .accept-conditions-box:checked ~ .accept-conditions-text:before {
   background-color: #2196f3;
   border-color: transparent;
-  background-image: url("../../images/checkbox-Vector.svg");
+  background-image: url(../../images/checkbox-Vector.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: inherit;
