--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -54,15 +54,14 @@
   background-repeat: no-repeat;
 
   // для мобилки:
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), 
-  url("/images/Header-mobile1x.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('/Header-mobile1x.jpg');
   background-size: cover;
 
   @media screen and (min-device-pixel-ratio: 2), 
   screen and (min-resolution: 192dpi), 
   screen and (min-resolution: 2dppx) {
     .hero-section {
-      background-image: url("/images/Header-mobile2x.jpg");
+      background-image: url('/Header-mobile2x.jpg');
     }
   }
 
@@ -70,13 +69,12 @@
   @media screen and (min-width: $tablet) {
     max-width: 768px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), 
-    url("/images/Header-tablet1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('/Header-tablet1x.jpg');
     background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url("/images/Header-tablet2x.jpg");
+        background-image: url('/Header-tablet2x.jpg');
       }
     }
   }
@@ -88,13 +86,12 @@
 
     margin-bottom: 94px;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8) rgba(47, 48, 58, 0.8)), 
-    url("/images/Header-desktop1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('/Header-desktop1x.jpg');
     background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url("/images/Header-desktop2x.jpg");
+        background-image: url('/Header-desktop2x.jpg');
       }
     }
   }
