--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -54,14 +54,14 @@
 
   // для мобилки:
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-  url('https://github.com/Valeriia789/goit-markup-hw-08/blob/master/images/Header-mob1x480w.jpg?raw=true'); 
+  url(''); 
   background-size: cover;
 
   @media screen and (min-device-pixel-ratio: 2), 
   screen and (min-resolution: 192dpi), 
   screen and (min-resolution: 2dppx) {
     .hero-section {
-      background-image: url('https://github.com/Valeriia789/goit-markup-hw-08/blob/master/images/Header-mob2x960w.jpg?raw=true');
+      background-image: url('');
       background-size: cover;
     }
   }
@@ -71,12 +71,12 @@
     max-width: 768px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-    url('https://github.com/Valeriia789/goit-markup-hw-08/blob/master/images/Header-tab1x768w.jpg?raw=true');
+    url('');
     background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url('https://github.com/Valeriia789/goit-markup-hw-08/blob/master/images/Header-tab2x1536w.jpg?raw=true');
+        background-image: url('');
         background-size: cover;
       }
     }
@@ -90,12 +90,12 @@
     margin-bottom: 94px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-    url('https://github.com/Valeriia789/goit-markup-hw-08/blob/master/images/Header-desk1x1600w.jpg?raw=true');
+    url('');
     background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url('https://github.com/Valeriia789/goit-markup-hw-08/blob/master/images/Header-desk2x3200w.jpg?raw=true');
+        background-image: url('');
         background-size: cover;
       }
     }
