--- a/sass/components-index/_doings-section.scss
+++ b/sass/components-index/_doings-section.scss
@@ -30,7 +30,7 @@
   justify-content: center;
 
   @media screen and (min-width: $desktop) {
-    width: calc((100% - 6 * 15px) / 3);
+    max-width: calc((100% - 6 * 15px) / 3);
     margin: 15px;
   }
 
