--- a/sass/components-index/_features-section.scss
+++ b/sass/components-index/_features-section.scss
@@ -30,18 +30,18 @@
 }
 
 .feachers-item {
-  width: calc(100% - 2 * 15px);
+  max-width: calc(100% - 2 * 15px);
   margin: 15px;
 
   @media screen and (min-width: $tablet) {
     // For small desktop devices
-    width: calc((100% - 4 * 15px) / 2);
+    max-width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
 
   @media screen and (min-width: $desktop) {
     // For large desktop devices
-    width: calc((100% - 8 * 15px) / 4);
+    max-width: calc((100% - 8 * 15px) / 4);
     margin: 15px;
   }
 
