--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -1,3 +1,63 @@
+.hero-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
+
+  max-width: 480px;
+  height: 400px;
+
+  background-position: center;
+  background-repeat: no-repeat;
+
+  // для мобилки:
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('../images/header-mob1x480w.jpg');
+  background-size: cover;
+
+  @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: url('../images/header-mob2x960w.jpg');
+      background-size: cover;
+    }
+  }
+
+  // для планшета:
+  @media screen and (min-width: $tablet) {
+    max-width: 768px;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('../images/header-tab1x768w.jpg');
+    background-size: cover;
+
+    @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+      .hero-section {
+        background-image: url('../images/header-tab2x1536w.jpg');
+        background-size: cover;
+      }
+    }
+  }
+
+  // для десктопа:
+  @media screen and (min-width: $desktop) {
+    max-width: 1600px;
+    height: 600px;
+
+    margin-bottom: 94px;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('../images/header-desk1x1600w.jpg');
+    background-size: cover;
+
+    @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+      .hero-section {
+        background-image: url('../images/header-desk2x3200w.jpg');
+        background-size: cover;
+      }
+    }
+  }
+}
+
 .hero-container {
   display: block;
 
@@ -33,71 +93,6 @@
     @media screen and (min-width: $desktop) {
       font-size: 44px;
       line-height: 60px;
-    }
-  }
-}
-
-.hero-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 60px;
-
-  max-width: 480px;
-  height: 400px;
-
-  background-position: center;
-  background-repeat: no-repeat;
-
-  // для мобилки:
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-  url('../images/header-mob1x480w.jpg'); 
-  background-size: cover;
-
-  @media screen and (min-device-pixel-ratio: 2), 
-  screen and (min-resolution: 192dpi), 
-  screen and (min-resolution: 2dppx) {
-    .hero-section {
-      background-image: url('../images/header-mob2x960w.jpg');
-      background-size: cover;
-    }
-  }
-
-  // для планшета:
-  @media screen and (min-width: $tablet) {
-    max-width: 768px;
-
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-    url('../images/header-tab1x768w.jpg');
-    background-size: cover;
-
-    @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-      .hero-section {
-        background-image: url('../images/header-tab2x1536w.jpg');
-        background-size: cover;
-      }
-    }
-  }
-
-  // для десктопа:
-  @media screen and (min-width: $desktop) {
-    max-width: 1600px;
-    height: 600px;
-
-    margin-bottom: 94px;
-
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-    url('../images/header-desk1x1600w.jpg');
-    background-size: cover;
-
-    @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-      .hero-section {
-        background-image: url('../images/header-desk2x3200w.jpg');
-        background-size: cover;
-      }
     }
   }
 }
