--- a/sass/components-index/_team-section.scss
+++ b/sass/components-index/_team-section.scss
@@ -51,7 +51,7 @@
   align-items: center;
   justify-content: center;
 
-  width: calc(100% - 2 * 15px);
+  max-width: calc(100% - 2 * 15px);
   margin: 15px;
 
   font-family: $font-main;
@@ -67,12 +67,12 @@
   }
 
   @media screen and (min-width: $tablet) {
-    width: calc((100% - 4 * 15px) / 2);
+    max-width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: calc((100% - 8 * 15px) / 4);
+    max-width: calc((100% - 8 * 15px) / 4);
     margin: 15px;
   }
 
