--- a/sass/components-portfolio/_portfolio-card-container.scss
+++ b/sass/components-portfolio/_portfolio-card-container.scss
@@ -8,15 +8,15 @@
   margin-bottom: 60px;
 
   @media screen and (min-width: $mobile) {
-    width: 480px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: $tablet) {
-    width: 768px;
+    max-width: 768px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 1200px;
+    max-width: 1200px;
     margin-top: 0px;
     margin-bottom: 94px;
   }
