--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -7,6 +7,13 @@
 //   font-family: $font-main;
 // }
 
+body {
+  margin-left: auto;
+  margin-right: auto;
+
+  overflow-x: hidden;
+}
+
 body.modal-open {
   overflow: hidden;
 }
